AMP-197 Wired SubscriptionServiceV2 into controller to use new db tables