@@ -8,7 +8,8 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import uk.gov.hmcts.cp.filters.CorrelationIdService;
 import uk.gov.hmcts.cp.hmac.services.EncodingService;
 import uk.gov.hmcts.cp.hmac.services.HmacKeyService;
-import uk.gov.hmcts.cp.subscription.entities.ClientSubscriptionEntity;
+import uk.gov.hmcts.cp.subscription.entities.ClientEntity;
+import uk.gov.hmcts.cp.subscription.entities.ClientEventEntity;
 import uk.gov.hmcts.cp.subscription.integration.IntegrationTestBase;
 
 import java.util.List;
@@ -56,7 +57,7 @@ class SubscriptionCreateControllerIntegrationTest extends IntegrationTestBase {
                 .andExpect(jsonPath("$.createdAt").exists())
                 .andExpect(jsonPath("$.hmac.keyId").value("kid-f4f5dc10-d6d8-4e94-8b02-459c4121aad0"))
                 .andExpect(jsonPath("$.hmac.secret").value(expectedSecret));
-        assertThatEventTypesAreSortedInDatabase();
+        assertDatabaseState();
     }
 
     @Test
@@ -68,9 +69,9 @@ class SubscriptionCreateControllerIntegrationTest extends IntegrationTestBase {
                         .content(body))
                 .andExpect(status().isCreated());
 
-        List<ClientSubscriptionEntity> saved = subscriptionRepository.findAll();
+        List<ClientEventEntity> saved = clientEventRepository.findAll();
         assertThat(saved).hasSize(1);
-        String existingId = saved.get(0).getId().toString();
+        String existingId = saved.getFirst().getSubscriptionId().toString();
 
         mockMvc.perform(post("/client-subscriptions")
                         .header("Authorization", AUTHORIZATION_HEADER_VALUE)
@@ -82,9 +83,14 @@ class SubscriptionCreateControllerIntegrationTest extends IntegrationTestBase {
                 .andExpect(jsonPath("$.message").value("subscription already exist with " + existingId));
     }
 
-    private void assertThatEventTypesAreSortedInDatabase() {
-        List<ClientSubscriptionEntity> entities = subscriptionRepository.findAll();
-        assertThat(entities).hasSize(1);
-        assertThat(entities.getFirst().getEventTypes().getFirst()).isEqualTo("PRISON_COURT_REGISTER_GENERATED");
+    private void assertDatabaseState() {
+        List<ClientEntity> clientEntities = clientRepository.findAll();
+        assertThat(clientEntities).hasSize(1);
+        assertThat(clientEntities.getFirst().getSubscriptionId()).isNotNull();
+
+        List<ClientEventEntity> clientEventEntities = clientEventRepository.findAll();
+        assertThat(clientEventEntities).hasSize(1);
+        assertThat(clientEventEntities.getFirst().getSubscriptionId()).isNotNull();
+        assertThat(clientEventEntities.getFirst().getEventTypeId()).isEqualTo(1);
     }
 }
